--- a/src/main/resources/com/example/affectation/fxml/affectation.fxml
+++ b/src/main/resources/com/example/affectation/fxml/affectation.fxml
@@ -1,34 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXTreeTableView?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Text?>
 
-<Pane prefHeight="660.0" prefWidth="730.0" style="-fx-background-color: #567895;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Affectation">
+<Pane prefHeight="660.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.AffectationController">
    <children>
-      <JFXTreeTableView layoutX="27.0" layoutY="122.0" prefHeight="400.0" prefWidth="675.0" />
-      <Button layoutX="27.0" layoutY="45.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="123.0" text="Historique">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
-      <ButtonBar layoutX="97.0" layoutY="579.0" prefHeight="40.0" prefWidth="518.0">
+      <ButtonBar layoutX="181.0" layoutY="574.0" prefHeight="40.0" prefWidth="349.0">
          <buttons>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="Ajouter" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="Modifier" />
+            <Button fx:id="modifierButton" mnemonicParsing="false" onAction="#handleButtonModifier" prefHeight="40.0" prefWidth="137.0" text="Modifier" />
             <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="132.0" text="Supprimer" />
             <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="PDF" />
          </buttons>
       </ButtonBar>
-      <ButtonBar layoutX="376.0" layoutY="40.0" prefHeight="40.0" prefWidth="326.0">
-         <buttons>
-            <DatePicker prefHeight="25.0" prefWidth="175.0" />
-            <DatePicker />
-         </buttons>
-      </ButtonBar>
+      <ButtonBar layoutX="376.0" layoutY="40.0" prefHeight="40.0" prefWidth="326.0" />
+      <TableView layoutX="27.0" layoutY="91.0" prefHeight="463.0" prefWidth="677.0" />
+      <HBox layoutX="28.0" layoutY="14.0" prefHeight="51.0" prefWidth="677.0" spacing="50.0">
+         <children>
+            <VBox prefHeight="51.0" prefWidth="162.0" spacing="5.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Employé" />
+                  <TextField prefHeight="25.0" prefWidth="134.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="10.0" layoutY="10.0" prefHeight="51.0" prefWidth="147.0" spacing="5.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date debut" />
+                  <DatePicker prefHeight="25.0" prefWidth="157.0" />
+               </children>
+            </VBox>
+            <VBox layoutX="110.0" layoutY="10.0" prefHeight="51.0" prefWidth="149.0" spacing="5.0">
+               <children>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date fin" />
+                  <DatePicker />
+               </children>
+            </VBox>
+         </children>
+      </HBox>
    </children>
 
 </Pane>
