--- a/src/main/resources/com/example/affectation/fxml/ajoutLieu.fxml
+++ b/src/main/resources/com/example/affectation/fxml/ajoutLieu.fxml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller">
+<AnchorPane prefHeight="400.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.AjoutLieuController">
    <children>
-      <TextField layoutX="35.0" layoutY="135.0" prefHeight="26.0" prefWidth="240.0" promptText="Province" />
-      <TextField layoutX="35.0" layoutY="221.0" prefHeight="26.0" prefWidth="240.0" promptText="Lieu" />
+      <TextField layoutX="47.0" layoutY="220.0" prefHeight="26.0" prefWidth="214.0" promptText="Lieu" />
       <Pane prefHeight="50.0" prefWidth="310.0" style="-fx-background-color: #013069;">
          <children>
-            <Label layoutX="22.0" layoutY="12.0" prefHeight="17.0" prefWidth="123.0" text="Ajout de lieu" textFill="WHITE">
+            <Label layoutX="103.0" layoutY="12.0" prefHeight="27.0" prefWidth="187.0" text="Ajout de lieu" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
@@ -28,5 +22,6 @@
             <Button mnemonicParsing="false" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
         </buttons>
       </ButtonBar>
+      <ComboBox layoutX="49.0" layoutY="146.0" prefHeight="25.0" prefWidth="214.0" promptText="Province" />
    </children>
 </AnchorPane>
