--- a/src/main/resources/com/example/affectation/fxml/employe.fxml
+++ b/src/main/resources/com/example/affectation/fxml/employe.fxml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXTreeTableView?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.Pane?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<Pane prefHeight="660.0" prefWidth="730.0" style="-fx-background-color: #567895;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Employe">
+<Pane prefHeight="660.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.EmployeController">
    <children>
-      <JFXTreeTableView layoutX="28.0" layoutY="122.0" prefHeight="400.0" prefWidth="675.0" />
+      <JFXTreeTableView layoutX="28.0" layoutY="93.0" prefHeight="483.0" prefWidth="675.0" />
       <Pane layoutX="19.0" prefHeight="103.0" prefWidth="692.0">
          <children>
             <TextField id="recherche" layoutX="394.0" layoutY="43.0" prefHeight="32.0" prefWidth="290.0" promptText="     Recherche" style="-fx-background-radius: 12;" />
+            <CheckBox layoutX="10.0" layoutY="67.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="135.0" text="Employé non affecté" />
          </children>
       </Pane>
-      <ButtonBar layoutX="100.0" layoutY="578.0" prefHeight="40.0" prefWidth="506.0">
+      <ButtonBar layoutX="100.0" layoutY="594.0" prefHeight="40.0" prefWidth="506.0">
          <buttons>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="Ajouter" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="Modifier" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="Supprimer" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="135.0" text="Affecter" />
+            <Button fx:id="ajouterEmpl" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="40.0" prefWidth="123.0" text="Ajouter" />
+            <Button fx:id="editerEmpl" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="40.0" prefWidth="123.0" text="Modifier" />
+            <Button fx:id="supprimerEmpl" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="40.0" prefWidth="123.0" text="Supprimer" />
+            <Button fx:id="affecterEmpl" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="40.0" prefWidth="135.0" text="Affecter" />
          </buttons>
       </ButtonBar>
    </children>
