--- a/src/main/resources/com/example/affectation/fxml/modifierAffect.fxml
+++ b/src/main/resources/com/example/affectation/fxml/modifierAffect.fxml
@@ -1,24 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.affectation.Controller"
-            prefHeight="642.0" prefWidth="430.0">
+<AnchorPane prefHeight="642.0" prefWidth="430.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.ModifierAffectController">
     <children>
-        <TextField layoutX="50.0" layoutY="440.0" prefHeight="25.0" prefWidth="330.0" promptText="Date prise de service" />
-        <TextField layoutX="50.0" layoutY="370.0" prefHeight="25.0" prefWidth="330.0" promptText="Date affectation" />
-        <TextField layoutX="50.0" layoutY="295.0" prefHeight="25.0" prefWidth="330.0" promptText="Nouveau lieu" />
-        <TextField layoutX="50.0" layoutY="215.0" prefHeight="25.0" prefWidth="330.0" promptText="Ancien lieu" />
         <Pane prefHeight="70.0" prefWidth="430.0" style="-fx-background-color: #013069;">
             <children>
-                <Label layoutX="14.0" layoutY="22.0" prefHeight="27.0" prefWidth="190.0" text="Ajout d'une affectation" textFill="WHITE">
+                <Label alignment="CENTER" layoutX="14.0" layoutY="22.0" prefHeight="27.0" prefWidth="401.0" text="Modification d'une affectation" textFill="WHITE">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -31,7 +21,21 @@
                 <Button mnemonicParsing="false" prefWidth="100.0" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-        <TextField layoutX="50.0" layoutY="136.0" prefHeight="25.0" prefWidth="330.0" promptText="Numéro employé" />
+      <VBox layoutX="40.0" layoutY="111.0" prefHeight="416.0" prefWidth="347.0" spacing="12.0">
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Numéro Employé " wrappingWidth="97.13671875" />
+            <TextField prefHeight="25.0" prefWidth="299.0" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Ancien Lieu" wrappingWidth="89.955078125" />
+            <TextField />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nouvelle Province" wrappingWidth="100.0" />
+            <ComboBox prefHeight="25.0" prefWidth="347.0" />
+            <Text layoutX="10.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nouveau Lieu" wrappingWidth="100.0" />
+            <ComboBox layoutX="10.0" layoutY="170.0" prefHeight="25.0" prefWidth="347.0" />
+            <Text layoutX="10.0" layoutY="221.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Affectation" wrappingWidth="100.0" />
+            <DatePicker prefHeight="25.0" prefWidth="348.0" />
+            <Text layoutX="10.0" layoutY="285.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date Prise de Service" wrappingWidth="128.0" />
+            <DatePicker layoutX="10.0" layoutY="301.0" prefHeight="25.0" prefWidth="348.0" />
+         </children></VBox>
     </children>
 
 </AnchorPane>
