--- a/src/main/resources/com/example/affectation/fxml/modifierLieu.fxml
+++ b/src/main/resources/com/example/affectation/fxml/modifierLieu.fxml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.affectation.Controller"
-            prefHeight="400.0" prefWidth="310.0">
+<?import javafx.scene.text.Text?>
+
+<AnchorPane prefHeight="400.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.ModifierLieuController">
     <children>
-        <TextField layoutX="35.0" layoutY="135.0" prefHeight="26.0" prefWidth="240.0" promptText="Province" />
-        <TextField layoutX="35.0" layoutY="221.0" prefHeight="26.0" prefWidth="240.0" promptText="Lieu" />
+        <TextField layoutX="35.0" layoutY="221.0" prefHeight="26.0" prefWidth="240.0" />
         <Pane prefHeight="50.0" prefWidth="310.0" style="-fx-background-color: #013069;">
             <children>
-                <Label layoutX="22.0" layoutY="12.0" prefHeight="17.0" prefWidth="123.0" text="Ajout de lieu" textFill="WHITE">
+                <Label alignment="CENTER" layoutX="22.0" layoutY="12.0" prefHeight="27.0" prefWidth="270.0" text="Modification de lieu" textFill="WHITE">
                     <font>
                         <Font size="18.0" />
                     </font>
@@ -29,6 +28,9 @@
                 <Button mnemonicParsing="false" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
             </buttons>
         </ButtonBar>
+      <ComboBox layoutX="34.0" layoutY="150.0" prefHeight="25.0" prefWidth="240.0" />
+      <Text layoutX="35.0" layoutY="139.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Province" wrappingWidth="62.1875" />
+      <Text layoutX="35.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Lieu" wrappingWidth="62.1875" />
     </children>
 
 </AnchorPane>
