--- a/src/main/resources/com/example/affectation/fxml/view.fxml
+++ b/src/main/resources/com/example/affectation/fxml/view.fxml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import com.jfoenix.controls.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<BorderPane prefHeight="700.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller">
+<BorderPane prefHeight="700.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.Controller">
     <top>
-        <Pane prefHeight="25.0" prefWidth="930.0" style="-fx-background-color: #F3F3F3;" BorderPane.alignment="CENTER">
+        <Pane prefHeight="0.0" prefWidth="930.0" style="-fx-background-color: #F3F3F3;" BorderPane.alignment="CENTER">
             <children>
                 <Label layoutX="14.0" layoutY="3.0">
                     <font>
@@ -30,26 +25,26 @@
         </Pane>
     </top>
     <left>
-        <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #013069;" BorderPane.alignment="CENTER">
+        <Pane nodeOrientation="RIGHT_TO_LEFT" prefHeight="400.0" prefWidth="200.0" style="-fx-background-color: #013069;" BorderPane.alignment="CENTER">
             <children>
-                <VBox layoutY="64.0" prefHeight="446.0" prefWidth="200.0">
+                <VBox alignment="CENTER" layoutX="4.0" layoutY="125.0" nodeOrientation="RIGHT_TO_LEFT" prefHeight="225.0" prefWidth="192.0">
                     <children>
-                  <Pane prefHeight="65.0" prefWidth="200.0" />
-                        <JFXButton onAction="#employe" prefHeight="59.0" prefWidth="200.0" text="EMPLOYE" textFill="#fffbfb">
+                  <Pane nodeOrientation="RIGHT_TO_LEFT" prefHeight="65.0" prefWidth="200.0" />
+                        <JFXButton onAction="#employe" prefHeight="31.0" prefWidth="176.0" style="-fx-background-color: white;" text="Employe">
                             <font>
-                                <Font size="20.0" />
+                                <Font size="15.0" />
                             </font>
                         </JFXButton>
-                  <Pane prefHeight="94.0" prefWidth="200.0" />
-                        <JFXButton onAction="#affectation" prefHeight="69.0" prefWidth="200.0" text="AFFECTATION" textFill="WHITE">
+                  <Pane prefHeight="94.0" prefWidth="162.0" />
+                        <JFXButton onAction="#affectation" prefHeight="31.0" prefWidth="174.0" style="-fx-background-color: white;" text="Affectation">
                             <font>
-                                <Font size="20.0" />
+                                <Font size="15.0" />
                             </font>
                         </JFXButton>
                   <Pane prefHeight="90.0" prefWidth="200.0" />
-                        <JFXButton onAction="#lieu" prefHeight="66.0" prefWidth="200.0" text="LIEU" textFill="WHITE">
+                        <JFXButton onAction="#lieu" prefHeight="31.0" prefWidth="174.0" style="-fx-background-color: white;" text="Lieu">
                             <font>
-                                <Font size="20.0" />
+                                <Font size="15.0" />
                             </font>
                         </JFXButton>
 
