--- a/src/main/resources/com/example/affectation/fxml/ajoutAffect.fxml
+++ b/src/main/resources/com/example/affectation/fxml/ajoutAffect.fxml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="642.0" prefWidth="410.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.AjoutAffectController">
+<AnchorPane fx:id="modalAffectLabel" prefHeight="642.0" prefWidth="410.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.AjoutAffectController">
     <children>
-        <TextField layoutX="52.0" layoutY="303.0" prefHeight="25.0" prefWidth="330.0" />
-        <TextField layoutX="51.0" layoutY="249.0" prefHeight="26.0" prefWidth="330.0" />
-        <TextField layoutX="50.0" layoutY="196.0" prefHeight="25.0" prefWidth="330.0" />
-        <TextField layoutX="50.0" layoutY="146.0" prefHeight="25.0" prefWidth="330.0" />
+        <TextField fx:id="posteField" layoutX="52.0" layoutY="303.0" prefHeight="25.0" prefWidth="330.0" />
+        <TextField fx:id="lieu_empl" layoutX="51.0" layoutY="249.0" prefHeight="26.0" prefWidth="330.0" />
+        <TextField fx:id="prenoms_empl" layoutX="50.0" layoutY="196.0" prefHeight="25.0" prefWidth="330.0" />
+        <TextField fx:id="nom_empl" layoutX="50.0" layoutY="146.0" prefHeight="25.0" prefWidth="330.0" />
         <Pane prefHeight="70.0" prefWidth="430.0" style="-fx-background-color: #013069;">
             <children>
                 <Label layoutX="14.0" layoutY="22.0" prefHeight="27.0" prefWidth="190.0" text="Ajout d'une affectation" textFill="WHITE">
@@ -21,11 +27,11 @@
         </Pane>
         <ButtonBar layoutX="91.0" layoutY="561.0" prefHeight="78.0" prefWidth="232.0">
             <buttons>
-                <Button mnemonicParsing="false" style="-fx-background-color: #013069;" text="OK" textFill="WHITE" />
-                <Button mnemonicParsing="false" prefWidth="100.0" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
+                <Button mnemonicParsing="false" onAction="#addAffect" style="-fx-background-color: #013069;" text="OK" textFill="WHITE" />
+                <Button mnemonicParsing="false" onAction="#cancelAffect" prefWidth="100.0" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
             </buttons>
         </ButtonBar>
-      <TextField layoutX="50.0" layoutY="96.0" prefHeight="25.0" prefWidth="330.0" />
+      <TextField fx:id="num_empl" layoutX="50.0" layoutY="96.0" prefHeight="25.0" prefWidth="330.0" />
       <Label layoutX="52.0" layoutY="129.0" text="Nom :" />
       <Label layoutX="50.0" layoutY="180.0" text="Prénoms :" />
       <Label layoutX="52.0" layoutY="230.0" text="Ancien lieu :" />
@@ -33,12 +39,12 @@
       <Label layoutX="53.0" layoutY="337.0" text="Nouvelle province :" />
       <Label layoutX="53.0" layoutY="390.0" text="Nouvelle lieu :" />
       <Label layoutX="50.0" layoutY="79.0" text="Numéro :" />
-      <DatePicker layoutX="52.0" layoutY="468.0" prefHeight="26.0" prefWidth="330.0" />
+      <DatePicker fx:id="date_affect" layoutX="52.0" layoutY="468.0" prefHeight="26.0" prefWidth="330.0" />
       <Label layoutX="52.0" layoutY="448.0" text="Date affectation :" />
-      <DatePicker layoutX="53.0" layoutY="524.0" prefHeight="26.0" prefWidth="330.0" />
+      <DatePicker fx:id="date_service" layoutX="53.0" layoutY="524.0" prefHeight="26.0" prefWidth="330.0" />
       <Label layoutX="53.0" layoutY="503.0" text="Date prise de service :" />
-      <ComboBox layoutX="51.0" layoutY="356.0" prefHeight="25.0" prefWidth="330.0" />
-      <ComboBox layoutX="52.0" layoutY="411.0" prefHeight="25.0" prefWidth="330.0" />
+      <ComboBox fx:id="new_prov" layoutX="51.0" layoutY="356.0" prefHeight="25.0" prefWidth="330.0" />
+      <ComboBox fx:id="new_lieu" layoutX="52.0" layoutY="411.0" prefHeight="25.0" prefWidth="330.0" />
     </children>
 
 </AnchorPane>
