--- a/src/main/resources/com/example/affectation/fxml/lieu.fxml
+++ b/src/main/resources/com/example/affectation/fxml/lieu.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="660.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.LieuController">
+<Pane prefHeight="660.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.LieuController">
    <children>
-      <JFXTreeTableView layoutX="50.0" layoutY="96.0" prefHeight="427.0" prefWidth="632.0" />
       <ButtonBar layoutX="175.0" layoutY="578.0" prefHeight="40.0" prefWidth="366.0">
          <buttons>
             <Button fx:id="ajouterLieuButton" mnemonicParsing="false" onAction="#handleAjouterLieuButton" prefHeight="40.0" prefWidth="123.0" text="Ajouter" />
@@ -14,6 +14,7 @@
             <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="Supprimer" />
          </buttons>
       </ButtonBar>
+      <TableView layoutX="17.0" layoutY="31.0" prefHeight="531.0" prefWidth="694.0" />
    </children>
 
 </Pane>
