--- a/src/main/resources/com/example/affectation/fxml/employe.fxml
+++ b/src/main/resources/com/example/affectation/fxml/employe.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="660.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.EmployeController">
+<Pane prefHeight="660.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.EmployeController">
    <children>
-      <JFXTreeTableView layoutX="28.0" layoutY="93.0" prefHeight="483.0" prefWidth="675.0" />
       <Pane layoutX="19.0" prefHeight="103.0" prefWidth="692.0">
          <children>
             <TextField id="recherche" layoutX="394.0" layoutY="43.0" prefHeight="32.0" prefWidth="290.0" promptText="     Recherche" style="-fx-background-radius: 12;" />
@@ -21,6 +23,7 @@
             <Button fx:id="affecterEmpl" mnemonicParsing="false" onAction="#handleButtonClick" prefHeight="40.0" prefWidth="135.0" text="Affecter" />
          </buttons>
       </ButtonBar>
+      <TableView layoutX="30.0" layoutY="89.0" prefHeight="497.0" prefWidth="673.0" />
    </children>
 
 </Pane>
