--- a/src/main/resources/com/example/affectation/fxml/affectation.fxml
+++ b/src/main/resources/com/example/affectation/fxml/affectation.fxml
@@ -15,30 +15,30 @@
       <ButtonBar layoutX="181.0" layoutY="574.0" prefHeight="40.0" prefWidth="349.0">
          <buttons>
             <Button fx:id="modifierButton" mnemonicParsing="false" onAction="#handleButtonModifier" prefHeight="40.0" prefWidth="137.0" text="Modifier" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="132.0" text="Supprimer" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="123.0" text="PDF" />
+            <Button mnemonicParsing="false" onAction="#deleteAffectation" prefHeight="40.0" prefWidth="132.0" text="Supprimer" />
+            <Button mnemonicParsing="false" onAction="#generatePDF" prefHeight="40.0" prefWidth="123.0" text="PDF" />
          </buttons>
       </ButtonBar>
       <ButtonBar layoutX="376.0" layoutY="40.0" prefHeight="40.0" prefWidth="326.0" />
-      <TableView layoutX="27.0" layoutY="91.0" prefHeight="463.0" prefWidth="677.0" />
+      <TableView fx:id="tableAffectation" layoutX="27.0" layoutY="91.0" prefHeight="463.0" prefWidth="677.0" />
       <HBox layoutX="28.0" layoutY="14.0" prefHeight="51.0" prefWidth="677.0" spacing="50.0">
          <children>
             <VBox prefHeight="51.0" prefWidth="162.0" spacing="5.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Employé" />
-                  <TextField prefHeight="25.0" prefWidth="134.0" />
+                  <TextField fx:id="searchAffEmploye" prefHeight="25.0" prefWidth="134.0" />
                </children>
             </VBox>
             <VBox layoutX="10.0" layoutY="10.0" prefHeight="51.0" prefWidth="147.0" spacing="5.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date debut" />
-                  <DatePicker prefHeight="25.0" prefWidth="157.0" />
+                  <DatePicker fx:id="dateDebut" onAction="#changeDebDate" prefHeight="25.0" prefWidth="157.0" />
                </children>
             </VBox>
             <VBox layoutX="110.0" layoutY="10.0" prefHeight="51.0" prefWidth="149.0" spacing="5.0">
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date fin" />
-                  <DatePicker />
+                  <DatePicker fx:id="dateFin" onAction="#changeFinDate" />
                </children>
             </VBox>
          </children>
