--- a/src/main/resources/com/example/affectation/fxml/ajoutLieu.fxml
+++ b/src/main/resources/com/example/affectation/fxml/ajoutLieu.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.AjoutLieuController">
+<AnchorPane fx:id="modalLieuAddLabel" prefHeight="400.0" prefWidth="310.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.affectation.Controller.AjoutLieuController">
    <children>
-      <TextField layoutX="47.0" layoutY="220.0" prefHeight="26.0" prefWidth="214.0" promptText="Lieu" />
+      <TextField fx:id="designField" layoutX="47.0" layoutY="220.0" prefHeight="26.0" prefWidth="214.0" promptText="Lieu" />
       <Pane prefHeight="50.0" prefWidth="310.0" style="-fx-background-color: #013069;">
          <children>
             <Label layoutX="103.0" layoutY="12.0" prefHeight="27.0" prefWidth="187.0" text="Ajout de lieu" textFill="WHITE">
@@ -18,10 +23,10 @@
       </Pane>
       <ButtonBar layoutX="55.0" layoutY="308.0" prefHeight="40.0" prefWidth="178.0">
         <buttons>
-          <Button mnemonicParsing="false" style="-fx-background-color: #013069;" text="OK" textFill="WHITE" />
-            <Button mnemonicParsing="false" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
+          <Button mnemonicParsing="false" onAction="#addLieu" style="-fx-background-color: #013069;" text="OK" textFill="WHITE" />
+            <Button mnemonicParsing="false" onAction="#cancelAdding" style="-fx-background-color: #013069;" text="Annuler" textFill="WHITE" />
         </buttons>
       </ButtonBar>
-      <ComboBox layoutX="49.0" layoutY="146.0" prefHeight="25.0" prefWidth="214.0" promptText="Province" />
+      <ComboBox fx:id="provinceCombo" layoutX="49.0" layoutY="146.0" prefHeight="25.0" prefWidth="214.0" promptText="Province" />
    </children>
 </AnchorPane>
